--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
  <head> 
   <meta charset="UTF-8"> 
   <meta name="viewport" content="width=device-width, initial-scale=1.0"> 
-  <title>Our Project</title> 
+  <title>Our Project </title> 
   <style>
     :root {
       --spotify-green: #1DB954;
@@ -70,6 +70,7 @@
  <body> 
   <header>
    Welcome to Our Project
+   
   </header> 
   <div class="section"> 
    <img src="ansh.png" alt="Image 1"> <br>
@@ -77,13 +78,9 @@
   </div> 
   <div class="section"> 
    <img src="https://via.placeholder.com/300x150?text=Image+2" alt="Image 2"><br>
-    <button class="btn">View</button> 
+   <button class="btn" ><a href="https://ianshvermagit.github.io/finds/" class="no">View</a></button>
   </div> 
   
-  <script>
-    function showMessage(num) {
-      alert("Find Your Recipe" + num);
-    }
-  </script> 
+  
  </body>
 </html>
