--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
    <button class="btn" ><a href="https://ianshvermagit.github.io/Find/" class="no">View</a></button>
   </div> 
   <div class="section"> 
-   <img src="https://via.placeholder.com/300x150?text=Image+2" alt="Image 2"><br>
+   <img src="ansh1.png" alt="Image 2"><br>
    <button class="btn" ><a href="https://ianshvermagit.github.io/finds/" class="no">View</a></button>
   </div> 
   
