--- a/index.html
+++ b/index.html
@@ -134,11 +134,11 @@
   <div class="container">
     <div class="card">
       <img src="a.jpg" alt="Image 1" />
-      <button class="btn" ><a href="https://ianshvermagit.github.io/myprotfolio/" class="no">Portfolio</a></button>
+      <button class="btn" ><a href="https://ianshvermagit.github.io/myprotfolio/" class="no">Ansh</a></button>
     </div>
     <div class="card">
       <img src="s.jpg" alt="Image 2" />
-      <button class="btn" ><a href="https://copy-ghost.github.io/Portfolio/" class="no">Portfolio</a></button>
+      <button class="btn" ><a href="https://copy-ghost.github.io/Portfolio/" class="no">Shantanu</a></button>
     </div>
   </div>
 
