--- a/index.html
+++ b/index.html
@@ -138,7 +138,7 @@
     </div>
     <div class="card">
       <img src="s.jpg" alt="Image 2" />
-      <button class="btn" ><a href="https://copy-ghost.github.io/Portfolio/" class="no">Shantanu</a></button>
+      <button class="btn" ><a href="https://copy-ghost.github.io/Portfolio/" class="no">Shan</a></button>
     </div>
   </div>
 
