--- a/index.html
+++ b/index.html
@@ -127,7 +127,7 @@
   </div> 
   <div class="section"> 
    <img src="ansh1.png" alt="Image 2"><br>
-   <button class="btn" ><a href="https://ianshvermagit.github.io/finds/" class="no">View</a></button>
+   <button class="btn" ><a href="https://copy-ghost.github.io/recipe/ " class="no">View</a></button>
   </div> 
   <hr>
   <center><h4> Developed By -</h4></center>
