--- a/index.html
+++ b/index.html
@@ -126,7 +126,7 @@
    <button class="btn" ><a href="https://ianshvermagit.github.io/Find/" class="no">View</a></button>
   </div> 
   <div class="section"> 
-   <img src="ansh1.png" alt="Image 2"><br>
+   <img src="r2.png" alt="Image 2"><br>
    <button class="btn" ><a href="https://copy-ghost.github.io/recipe/ " class="no">View</a></button>
   </div> 
   <hr>
