--- a/index.html
+++ b/index.html
@@ -133,7 +133,7 @@
   <center><h4> Developed By -</h4></center>
   <div class="container">
     <div class="card">
-      <img src="a1.png" alt="Image 1" />
+      <img src="a.jpg" alt="Image 1" />
       <button class="btn" ><a href="https://ianshvermagit.github.io/myprotfolio/" class="no">Ansh</a></button>
     </div>
     <div class="card">
