Fix links in index.html
Updated links in the project description and developer cards.

--- a/index.html
+++ b/index.html
@@ -134,7 +134,7 @@
   <div class="container">
     <div class="card">
       <img src="a.jpg" alt="Image 1" />
-      <button class="btn" ><a href="https://ianshvermagit.github.io/myprotfolio/" class="no">Ansh</a></button>
+      <button class="btn" ><a href="https://ansh-msd.github.io/myportfolio/" class="no">Ansh</a></button>
     </div>
     <div class="card">
       <img src="s.jpg" alt="Image 2" />
@@ -146,3 +146,4 @@
  
  </body>
 </html>
+
